<resources>
    <string name="app_name">FoodOrderAndDeliveryAppKotlin</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account_sign_up">No account? Sign up here</string>
    <string name="already_have_account_login">Already have an account? Login here</string>
</resources>